--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>我的个人博客</title>
+    <title>Tony Ni的个人博客</title>
     <style>
       /* 添加一些样式，使页面更美观 */
       body {
@@ -53,7 +53,7 @@
   </head>
   <body>
     <header>
-      <h1>我的个人博客</h1>
+      <h1>Tony Ni的个人博客</h1>
     </header>
     <nav>
       <a href="#">首页</a>
