--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 	Binary by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Binary by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>DreamFish Software</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 		<!-- Header -->
-			<header id="header"><a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
-				<nav><a href="#menu">Menu</a>
-				</nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+			<header id="header"><a href="index.html" class="logo"><DreamFish</strong> Software</a>
+				<nav><a href="#menu">菜单</a>
+				</nav></header><!-- Nav --><nav id="主页"><ul class="links"><li><a href="index.html">Home</a></li>
+					<li><a href="generic.html">关于作者</a></li>
+					<li><a href="elements.html">软件</a></li>
 				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
-					<h1>This is Binary, a free and fully responsive<br>
-					website template by <a href="https://templated.co">TEMPLATED</a></h1>
-					<ul class="actions"><li><a href="#one" class="button alt scrolly big">Continue</a></li>
-					</ul></div>
+					<h1>使用易语言制作的软件，免费共享并可套用，同时支持提供源码！</a></h1>
 			</section><!-- One --><article id="one" class="post style1"><div class="image">
 					<img src="images/pic14.jpg" alt="" data-position="75% center" width="1400" height="788"></div>
 				<div class="content">
