--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
 --><html><head><title>DreamFish Software</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 		<!-- Header -->
-			<header id="header"><a href="index.html" class="logo"><DreamFish</strong> Software</a>
+			<header id="header"><a href="index.html" class="logo">< DreamFish </strong> Software</a>
 				<nav><a href="#menu">菜单</a>
-				</nav></header><!-- Nav --><nav id="主页"><ul class="links"><li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">关于作者</a></li>
-					<li><a href="elements.html">软件</a></li>
 				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
 					<h1>使用易语言制作的软件，免费共享并可套用，同时支持提供源码！</a></h1>
 			</section><!-- One --><article id="one" class="post style1"><div class="image">
 					<img src="images/pic14.jpg" alt="" data-position="75% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Ipsum lorem sed magna</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<header><h2><a href="generic.html">Sense桌面钟</a></h2>
+							<p class="info">Raining_Fish <a href="#">发布</a></p>
+						</header><p>高仿了HTC旧时期的Sense主题时钟，主打的就是一个“怀旧风”！请注意！如果需要关闭该软件，请按下Ctrl+Shift+Esc在任务管理器中关闭！另外这个时钟无法置顶！请谅解！后续软件会在本网站定期更新，请敬请期待哦！！！</p>
+						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-6xAD3.html" class="button alt">点我下载(非限速网盘)</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
