--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Binary by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>DreamFish Software</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>DreamFish ISO</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 		<!-- Header -->
 			<header id="header"><a href="index.html" class="logo">< DreamFish </strong> Software</a>
@@ -14,10 +14,10 @@
 					<img src="images/pic14.jpg" alt="" data-position="75% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Sense桌面钟</a></h2>
+						<header><h2><a href="generic.html">Windows镜像</a></h2>
 							<p class="info">Raining_Fish <a href="#">发布</a></p>
-						</header><p>高仿了HTC旧时期的Sense主题时钟，主打的就是一个“怀旧风”！请注意！如果需要关闭该软件，请按下Ctrl+Shift+Esc在任务管理器中关闭！另外这个时钟无法置顶！请谅解！后续软件会在本网站定期更新，请敬请期待哦！！！</p>
-						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-6xAD3.html" class="button alt">点我下载(非限速网盘)</a></li>
+						</header><p>Windows是一款深受大众喜爱的图形化操作系统，在这个版块收录了大部分Windows正式版镜像，不限速下载，提供Windows 3.1以上的镜像系统！</p>
+						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-6xAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
