--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 			<header id="header"><a href="index.html" class="logo">< DreamFish </strong> Software</a>
 				<nav><a href="#menu">菜单</a>
 				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
-					<h1>使用易语言制作的软件，免费共享并可套用，同时支持提供源码！</a></h1>
-			</section><!-- One --><article id="one" class="post style1"><div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="75% center" width="1400" height="788"></div>
+					<h1>提供了大部分系统镜像，让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Windows镜像</a></h2>
+						<header><h2><a href="generic.html">Windows 镜像</a></h2>
 							<p class="info">Raining_Fish <a href="#">发布</a></p>
 						</header><p>Windows是一款深受大众喜爱的图形化操作系统，在这个版块收录了大部分Windows正式版镜像，不限速下载，提供Windows 3.1以上的镜像系统！</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-6xAD3.html" class="button alt">点我进入下载列表</a></li>
@@ -24,37 +22,29 @@
 						<a href="#two" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
-			</article><!-- Two --><article id="two" class="post invert style1 alt"><div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="10% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Donec ex risus mollis</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<header><h2><a href="generic.html">Windows 开发版本镜像（预览版等版本）</a></h2>
+							<p class="info">Raining_Fish<a href="#">发布</a></p>
+						</header><p>一些Windows的其他特殊版本，不推荐使用实体机使用，建议使用虚拟机测试玩玩，对正式版本会有一些bug，不推荐日常使用！</p>
+						<ul class="actions"><li><a href="generic.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#one" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
 						<a href="#three" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
-			</article><!-- Three --><article id="three" class="post style2"><div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
-				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Sed tempus interdum</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<header><h2><a href="generic.html">MS-DOS磁盘操作系统</a></h2>
+							<p class="info">Raining_Fish<a href="#">发布</a></p>
+						</header><p>这个操作系统仅供在虚拟机里玩玩，不是图形化界面哦，电脑老手可能懂些，不知道MS-DOS是什么的自己百度一下！</p>
+						<ul class="actions"><li><a href="generic.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#two" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
 						<a href="#four" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
-			</article><!-- Four --><article id="four" class="post invert style2 alt"><div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="60% center" width="1400" height="788"></div>
-				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">Adipiscing sed urna</a></h2>
 							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
