--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<header><h2><a href="generic.html">Windows 镜像</a></h2>
 							<p class="info">Raining_Fish <a href="#">发布</a></p>
 						</header><p>Windows是一款深受大众喜爱的图形化操作系统，在这个版块收录了大部分Windows正式版镜像，不限速下载，提供Windows 3.1以上的镜像系统！</p>
-						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-6xAD3.html" class="button alt">点我进入下载列表</a></li>
+						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
