--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 					<h1>提供了大部分系统镜像，让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Windows 镜像</a></h2>
-							<p class="info">Raining_Fish <a href="#">发布</a></p>
-						</header><p>Windows是一款深受大众喜爱的图形化操作系统，在这个版块收录了大部分Windows正式版镜像，不限速下载，提供Windows 3.1以上的镜像系统！</p>
+						<header><h2><a href="generic.html">全部镜像</a></h2>
+							<p class="info">Raining_Fish，zhao114514<a href="#">提供镜像资源</a></p>
+						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像，免费下载，不限速！不断更，长时间更新哦！</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
