--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">全部镜像</a></h2>
-							<p class="info">Raining_Fish，zhao114514<a href="#">提供镜像资源</a></p>
+							<p class="info">Raining_Fish，赵某人<a href="#">提供镜像资源</a></p>
 						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像，免费下载，不限速！不断更，长时间更新哦！</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
