--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 			<header id="header"><a href="index.html" class="logo">< DreamFish </strong> Software</a>
 				<nav><a href="#menu">菜单</a>
 				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
-					<h1>提供了大部分系统镜像<br />
-						让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
+					<h1>提供了大部分系统镜像<br /></a></h1>
+					<h1>让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">全部镜像</a></h2>
 							<p class="info">本站由Raining_Fish，赵某人<a href="#">提供镜像资源</a></p>
-						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像<br />
-							免费下载，不限速！<br />
-							不断更，长时间更新哦！</p>
+						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像<br /></p>
+						</header><p>免费下载，不限速！<br /></p>
+						</header><p>不断更，长时间更新哦！</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
@@ -29,7 +29,7 @@
 					<div class="inner">
 						<header><h2><a href="generic.html">Windows 开发版本镜像（预览版等版本）</a></h2>
 							<p class="info">Raining_Fish<a href="#">发布</a></p>
-						</header><p>一些Windows的其他特殊版本，不推荐使用实体机使用，建议使用虚拟机测试玩玩，相比于正式版本会有一些bug，不推荐日常使用！</p>
+						</header><p>一些Windows的其他特殊版本，不推荐使用实体机使用，建议使用虚拟机测试玩玩，相比于正式版会多出一些特性(bug)，不推荐日常使用！</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
@@ -41,7 +41,7 @@
 						<header><h2><a href="generic.html">MS-DOS磁盘操作系统</a></h2>
 							<p class="info">Raining_Fish<a href="#">发布</a></p>
 						</header><p>这个操作系统非常古老，仅供在虚拟机里玩玩，不是图形化界面哦，电脑老手可能懂些，不知道MS-DOS是什么的自己百度一下！<br />
-						Apple II：世界...遗忘我...</p>
+						BASIC：世界...遗忘我...</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
