--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<h1>让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
 				<div class="content">
 					<div class="inner">
-						<a href="#">本站由</a><p class="info">Raining_Fish，赵某人<a href="#">提供镜像资源</a></p>
+						<a href="#">本站由<p class="info">Raining_Fish，赵某人<a href="#">提供镜像资源</a></a></p>
 						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像<br /></p>
 						</header><p>免费下载，不限速！<br /></p>
 						</header><p>不断更，长时间更新哦！</p>
