--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 	Binary by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>DreamFish ISO</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>Binary by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 		<!-- Header -->
-			<header id="header"><a href="index.html" class="logo">< DreamFish </strong> Software</a>
-				<nav><a href="#menu">菜单</a>
+			<header id="header"><a href="index.html" class="logo"><strong>DreamFish</strong> Software</a>
+				<nav><a href="#menu">Menu</a>
+				</nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
+					<li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li>
 				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
-					<h1>提供了大部分系统镜像<br /></a></h1>
-					<h1>让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
+					<h1>本站提供了大部分系统镜像<br>
+                                              让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
+					</ul></div>
+			</section><!-- One --><article id="one" class="post style1"><div class="image">
+					<img src="images/pic14 .jpg" alt="" data-position="75% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<a href="#">本站由</a><p class="info">Raining_Fish，赵某人</p><a href="#">提供镜像资源</a></p>
-						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像<br /></p>
-						</header><p>免费下载，不限速！<br /></p>
-						</header><p>不断更，长时间更新哦！</p>
+						<header><h2><a href="generic.html">Windows 镜像</a></h2>
+							<p class="info">本站由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
+						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux等大部分操作系统镜像。</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
@@ -24,30 +29,37 @@
 						<a href="#two" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
+			</article><!-- Two --><article id="two" class="post invert style1 alt"><div class="image">
+					<img src="images/pic13.jpg" alt="" data-position="10% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Windows 开发版本镜像（预览版等版本）</a></h2>
-							<p class="info">Raining_Fish<a href="#">发布</a></p>
-						</header><p>一些Windows的其他特殊版本，不推荐使用实体机使用，建议使用虚拟机测试玩玩，相比于正式版会多出一些特性(bug)，不推荐日常使用！</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">点我进入下载列表</a></li>
+						<header><h2><a href="generic.html">Donec ex risus mollis</a></h2>
+							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#one" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
 						<a href="#three" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
+			</article><!-- Three --><article id="three" class="post style2"><div class="image">
+					<img src="images/pic12.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
+				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">MS-DOS磁盘操作系统</a></h2>
-							<p class="info">Raining_Fish<a href="#">发布</a></p>
-						</header><p>这个操作系统非常古老，仅供在虚拟机里玩玩，不是图形化界面哦，电脑老手可能懂些，不知道MS-DOS是什么的自己百度一下！<br />
-						BASIC：世界...遗忘我...</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">点我进入下载列表</a></li>
+						<header><h2><a href="generic.html">Sed tempus interdum</a></h2>
+							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#two" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
 						<a href="#four" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
+			</article><!-- Four --><article id="four" class="post invert style2 alt"><div class="image">
+					<img src="images/pic14.jpg" alt="" data-position="60% center" width="1400" height="788"></div>
+				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">Adipiscing sed urna</a></h2>
 							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
@@ -69,6 +81,8 @@
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
+						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
+						<a href="#six" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
 			</article><!-- Six --><article id="six" class="post invert style3 alt"><div class="image">
@@ -85,7 +99,5 @@
 						<a href="#" class="scrolly next disabled"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
-
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/skel.min.js"></script><script src="assets/js/util.js"></script><script src="assets/js/main.js"></script></body></html>
