--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">简介</a></h2>
-						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux甚至是Mac OS的dmg文件等大部分操作系统镜像。在这里免费为大家提供下载，不限速！</p>
+						</header><p>这里罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux甚至是Mac OS的dmg文件等大部分操作系统镜像。<br>在这里免费为大家提供下载，不限速！</p>
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
@@ -33,7 +33,7 @@
 					<div class="inner">
 						<header><h2><a href="generic.html">Windows 镜像</a></h2>
 							<p class="info">本站由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
-						</header><p>这里罗列了大部分的Windows电脑操作系统镜像（iso，img），大到最新的Windows11操作系统，小到最远古，原始的Windows3.1远古系统，免费下载，不限速是我们的必备！</p>
+						</header><p>这里罗列了大部分的Windows电脑操作系统镜像（iso，img），大到最新的Windows11操作系统，小到最远古、原始的Windows3.1远古系统，免费下载，不限速是我们的承诺！</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
