--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="inner">
 						<header><h2><a href="generic.html">Windows 镜像</a></h2>
 							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
-						</header><p>这里罗列了大部分的Windows电脑操作系统镜像（iso，img），大到最新的Windows11操作系统，小到最远古、原始的Windows3.1远古系统，免费下载，不限速是我们的承诺！</p>
+						</header><p>Windows系统，来自微软的强大操作系统，广泛应用于全球的个人电脑。凭借其丰富的功能和广泛的软件支持，Windows系统为用户提供了高效的工作和娱乐体验。无论你是一个游戏爱好者还是专业人士，Windows都能满足你的需求，让你尽情享受电脑带来的便利和乐趣。</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
@@ -46,9 +46,9 @@
 					<img src="images/pic12.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Sed tempus interdum</a></h2>
+						<header><h2><a href="generic.html">MacOS 镜像</a></h2>
 							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						</header><p>macOS，来自苹果的卓越操作系统，以其稳定性和流畅的用户体验受到全球用户的喜爱。macOS集成了丰富的苹果应用，并支持众多第三方软件，让你的Mac电脑成为工作和娱乐的理想伙伴。无论你是创意工作者还是日常办公用户，macOS都能满足你的需求，让你的电脑体验更上一层楼。</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
