--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">MacOS 镜像</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
 						</header><p>macOS，来自苹果的卓越操作系统，以其稳定性和流畅的用户体验受到全球用户的喜爱。macOS集成了丰富的苹果应用，并支持众多第三方软件，让你的Mac电脑成为工作和娱乐的理想伙伴。无论你是创意工作者还是日常办公用户，macOS都能满足你的需求，让你的电脑体验更上一层楼。</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
@@ -60,9 +60,9 @@
 					<img src="images/pic14.jpg" alt="" data-position="60% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Adipiscing sed urna</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<header><h2><a href="generic.html">Linux 镜像</a></h2>
+							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
+						</header><p>Linux是一款强大的开源操作系统，广泛应用于服务器、桌面和移动设备。它拥有稳定、高效和安全的特性，成为许多企业和开发者的首选。Linux具有丰富的软件生态，支持各种应用和服务，满足用户的不同需求。无论是初学者还是专业人士，Linux都能提供强大的技术支持和灵活的定制选项。</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
