--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">Linux 镜像</a></h2>
-							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
-						</header><p>Linux是一款强大的开源操作系统，广泛应用于服务器、桌面和移动设备。它拥有稳定、高效和安全的特性，成为许多企业和开发者的首选。Linux具有丰富的软件生态，支持各种应用和服务，满足用户的不同需求。无论是初学者还是专业人士，Linux都能提供强大的技术支持和灵活的定制选项。</p>
+							<p class="info">此部分还是由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
+						</header><p>Linux是一款强大的开源操作系统，广泛应用于服务器、桌面和移动设备。它拥有稳定、高效和安全的特性（rm -rf /*），成为许多企业和开发者的首选。Linux具有丰富的软件生态，支持各种应用和服务，满足用户的不同需求。无论是初学者还是专业人士，Linux都能提供强大的技术支持和灵活的定制选项。</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
@@ -75,8 +75,8 @@
 					<img src="images/pic13.jpg" alt="" data-position="5% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Interdum et rutrum</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+						<header><h2><a href="generic.html">远 古 系 统</a></h2>
+							<p class="info">此部分依然由Raining_Fish，赵某人<a href="#">提供镜像资源</p>
 						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
