--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 						<header><h2><a href="generic.html">简介</a></h2>
 						</header><p>本站罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux甚至是Mac OS的dmg文件等大部分操作系统镜像。<br>
 							在这里免费为大家提供下载，不限速！<br>
-							本站的两位开发者一个是初中生，一个是小学生，请不要对此网站进行破坏，谢谢！</p>
+							本站的两位开发者一个是初中生，一个是小学生，请不要对此网站进行破坏，谢谢！<br>
+							QQ:257947712<br>
+							邮箱:257947712@qq.com</p>
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
