--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 							本站的两位开发者一个是初中生，一个是小学生，请不要对此网站进行破坏，谢谢！<br>
 							QQ:257947712<br>
 							邮箱:257947712@qq.com</p>
+						       小学生WX：nitony2012</p>
+						小学生邮箱:nishaopeng1@outlook.com
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
@@ -32,7 +34,7 @@
 					</div>
 				</div>
 			</article><!-- Two --><article id="two" class="post invert style1 alt"><div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="10% center" width="1400" height="788"></div>
+					<img src="images/pic13.jpg" alt="" data-position="10% center" width="800" height="800"></div>
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">Windows 镜像</a></h2>
