--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 					<img src="images/pic13.jpg" alt="" data-position="5% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">远 古 系 统</a></h2>
+						<header><h2><a href="generic.html">远古系统</a></h2>
 							<p class="info">此部分依然由Raining_Fish，赵某人<a href="#">提供镜像资源</p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						</header><p>远古系统，如MS-DOS，是计算机技术的先驱。作为早期操作系统的代表，它为现代计算机技术的发展奠定了基础。尽管现在看来功能有限，但它在当时是革命性的创新，为后来的Windows等操作系统铺平了道路。</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
@@ -93,9 +93,9 @@
 					<img src="images/pic12.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
-						<header><h2><a href="generic.html">Magna porta aliquam</a></h2>
-							<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-						</header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<header><h2><a href="generic.html">DreamFishAsk</a></h2>
+							<p class="info">Raining_Fish<a href="#">提供服务</a></p>
+						</header><p>镜像不会用？怎么用虚拟机？装机用哪个ISO？——————这些问题于这个板块给大家解答！</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
 					<div class="postnav">
