--- a/generic.html
+++ b/generic.html
@@ -3,10 +3,10 @@
 	Binary by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Generic - Binary by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>DreamFishAsk--你敢问我敢答</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 <!-- Header -->
-<header id="header"><a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+<header id="header"><a href="index.html" class="logo"><strong>DreamFish</strong> Ask</a>
     <nav><a href="#menu">Menu</a>
     </nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
         <li><a href="generic.html">Generic</a></li>
@@ -14,18 +14,14 @@
     </ul></nav><section id="main"><div class="inner">
         <div class="image fit">
             <img src="images/pic11.jpg" alt=""></div>
-        <header><h1>Lorem ipsum dolor sit amet</h1>
+        <header><h1>本站遇到的常见问题</h1>
             <p class="info">3 days ago by <a href="#">Jane Doe</a></p>
-        </header><p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel. Nunc ullamcorper ipsum at diam congue luctus. Sed nec sapien blandit, tempor quam non, consectetur turpis. Morbi libero lorem, hendrerit sed metus non, malesuada placerat nulla. Sed nisi turpis, rutrum eget rutrum euismod, consequat ullamcorper eros. Quisque tortor nunc, sodales convallis nisl non, bibendum tincidunt tortor. Etiam pellentesque tincidunt nunc, a dignissim dolor tempus et. Pellentesque in urna ligula. Fusce ligula velit, mollis ac diam non, rutrum fringilla turpis.</p>
-        <p>Aliquam consequat, nulla sed sodales convallis, sem odio porttitor justo, non volutpat augue libero eget neque. Nunc consequat arcu nec tortor venenatis tempus a placerat mauris. Nam ultricies consequat ligula, et placerat arcu ultrices a. Sed placerat ipsum lacus, at imperdiet nisi imperdiet at. Vivamus diam dui, accumsan quis lacinia ac, sollicitudin feugiat metus. Vestibulum a velit ac eros blandit molestie non eget erat. Nunc eget odio erat. Nulla sit amet enim pharetra tortor molestie tempor nec sed turpis. Cras eget odio at erat dictum tincidunt. Sed facilisis convallis mi, eget tempor nunc pellentesque pulvinar. Etiam volutpat luctus tristique.</p>
-        <p>Aliquam erat eros, pretium non facilisis id, mollis a lacus. Nam nunc nisl, consequat at est vel, ornare feugiat tortor. Phasellus tempor ex vel mi blandit convallis. Sed accumsan sapien quis bibendum posuere. Vivamus convallis mattis ipsum. Suspendisse viverra purus non mi cursus, vitae pulvinar dui condimentum. Donec dui lacus, pretium in neque vitae, laoreet tempus nulla. Maecenas ac augue bibendum, consectetur ante eu, vulputate ipsum.</p>
-        <p>Nullam volutpat, sem at hendrerit volutpat, magna orci facilisis purus, et venenatis sapien sapien pretium libero. Duis hendrerit eget metus at molestie. Duis leo lorem, interdum a placerat ut, ullamcorper at eros. Donec convallis auctor cursus. Integer placerat felis mauris, sed cursus diam sodales et. Phasellus mi nibh, scelerisque vulputate viverra ut, dictum vitae mi. In at blandit felis. Aenean id porttitor neque. Nam bibendum a orci non pretium. Pellentesque feugiat erat augue, quis venenatis diam mollis eu.</p>
+        </header><p>你可以在这里找到一小部分你对使用本站，使用镜像，使用虚拟机，如何装机等问题得到固定解答！</p>
+        <p>Q：镜像是干什么用的</p>
+        <p>A:系统镜像是一种用于备份或恢复操作系统的文件，通常包含了操作系统的所有文件、引导文件、分区表信息等。系统镜像可以用来在不同的电脑上安装相同的操作系统，或者在电脑出现故障时还原操作系统。</p>
+        <p>Q：我是新手，什么Windows系统适合我呢？</p>
+        <p>A：Windows 10是适合大多数小白的最佳选择。它具有高度的稳定性、兼容性和易用性，同时对硬件的需求也相对较低。</p>
     </div>
-</section><!-- Footer --><footer id="footer"><ul class="icons"><li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-    </ul></footer><div class="copyright">
-    Made with: <a href="https://templated.co/">Templated.co</a>
 </div>
 
 <!-- Scripts -->
