--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 			</article><!-- Six --><article id="six" class="post invert style3 alt"><div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
+					<img src="images/q.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">DreamFishAsk</a></h2>
