--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 				</div>
 			</article><!-- Five --><article id="five" class="post style3"><div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="5% center" width="1400" height="788"></div>
+					<img src="images/dos.jpg" alt="" data-position="5% center" width="572" height="664"></div>
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">远古系统</a></h2>
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 			</article><!-- Six --><article id="six" class="post invert style3 alt"><div class="image">
-					<img src="images/q.jpg" alt="" data-position="80% center" width="1400" height="788"></div>
+					<img src="images/q.jpg" alt="" data-position="80% center" width="364" height="272"></div>
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">DreamFishAsk</a></h2>
