--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<header><h2><a href="generic.html">MacOS 镜像</a></h2>
 							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
 						</header><p>macOS，来自苹果的卓越操作系统，以其稳定性和流畅的用户体验受到全球用户的喜爱。macOS集成了丰富的苹果应用，并支持众多第三方软件，让你的Mac电脑成为工作和娱乐的理想伙伴。无论你是创意工作者还是日常办公用户，macOS都能满足你的需求，让你的电脑体验更上一层楼。</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#two" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
@@ -68,7 +68,7 @@
 						<header><h2><a href="generic.html">Linux 镜像</a></h2>
 							<p class="info">此部分还是由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
 						</header><p>Linux是一款强大的开源操作系统，广泛应用于服务器、桌面和移动设备。它拥有稳定、高效和安全的特性（rm -rf /*），成为许多企业和开发者的首选。Linux具有丰富的软件生态，支持各种应用和服务，满足用户的不同需求。无论是初学者还是专业人士，Linux都能提供强大的技术支持和灵活的定制选项。</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#three" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
@@ -82,7 +82,7 @@
 						<header><h2><a href="generic.html">远古系统</a></h2>
 							<p class="info">此部分依然由Raining_Fish，赵某人<a href="#">提供镜像资源</p>
 						</header><p>远古系统，如MS-DOS，是计算机技术的先驱。作为早期操作系统的代表，它为现代计算机技术的发展奠定了基础。尽管现在看来功能有限，但它在当时是革命性的创新，为后来的Windows等操作系统铺平了道路。</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
