--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 						</header><p>本站罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux甚至是Mac OS的dmg文件等大部分操作系统镜像。<br>
 							在这里免费为大家提供下载，不限速！<br>
 							本站的两位开发者一个是初中生，一个是小学生，请不要对此网站进行破坏，谢谢！<br>
-							QQ:257947712<br>
-							邮箱:257947712@qq.com</p>
-						       小学生WX：nitony2012</p>
+							初中生QQ:257947712<br>
+							初中生邮箱:257947712@qq.com<br>
+						       小学生WX：nitony2012<br>
 						小学生邮箱:nishaopeng1@outlook.com
 						</ul></div>
 					<div class="postnav">
