--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="content">
 					<div class="inner">
 						<header><h2><a href="generic.html">DreamFishAsk</a></h2>
-							<p class="info">Raining_Fish<a href="#">提供服务</a></p>
+							<p class="info">Raining_Fish、赵某人<a href="#">提供服务</a></p>
 						</header><p>镜像不会用？怎么用虚拟机？装机用哪个ISO？——————这些问题于这个板块给大家解答！</p>
 						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
 						</ul></div>
