--- a/generic.html
+++ b/generic.html
@@ -16,10 +16,12 @@
             <img src="images/pic11.jpg" alt=""></div>
         <header><h1>本站遇到的常见问题</h1>
 	</header><p>你可以在这里找到一小部分你对使用本站，使用镜像，使用虚拟机，如何装机等问题得到固定解答！</p>
-        <p>Q：镜像是干什么用的</p>
+        <p>Q：镜像是干什么用的？</p>
         <p>A:系统镜像是一种用于备份或恢复操作系统的文件，通常包含了操作系统的所有文件、引导文件、分区表信息等。系统镜像可以用来在不同的电脑上安装相同的操作系统，或者在电脑出现故障时还原操作系统。</p>
         <p>Q：我是新手，什么Windows系统适合我呢？</p>
         <p>A：Windows 10是适合大多数小白的最佳选择。它具有高度的稳定性、兼容性和易用性，同时对硬件的需求也相对较低。</p>
+	<p>Q：我想原神启动，什么系统适合我？</p>
+	<p>A：Windows Server 2019。这个系统负载低、稳定性高。</p>
     </div>
 </div>
 
