--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<div class="inner">
 						<header><h2><a href="generic.html">远古系统</a></h2>
 							<p class="info">此部分依然由Raining_Fish，赵某人<a href="#">提供镜像资源</p>
-						</header><p>远古系统，如MS-DOS，是计算机技术的先驱。作为早期操作系统的代表，它为现代计算机技术的发展奠定了基础。尽管现在看来功能有限，但它在当时是革命性的创新，为后来的Windows等操作系统铺平了道路。</p>
+						</header><p>远古系统，如MS-DOS，是计算机技术的先驱。作为早期操作系统的代表，它为现代计算机技术的发展奠定了基础。尽管现在看来功能有限，但它在当时是革命性的创新，为后来的Windows等操作系统铺平了道路。<br>BASIC：世界...遗忘我...</p>
 						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-bpAD3.html" class="button alt">点我进入下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
