--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 							初中生QQ:257947712<br>
 							初中生邮箱:257947712@qq.com<br>
 						       小学生WX：nitony2012<br>
-						小学生邮箱:nishaopeng1@outlook.com
+							小学生邮箱:nishaopeng1@outlook.com
+							<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-RfAD3.html" class="button alt">点我进入总的下载列表</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
