--- a/elements.html
+++ b/elements.html
@@ -3,16 +3,16 @@
 	Binary by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Elements - Binary by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>TellUS</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 <!-- Header -->
-<header id="header"><a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+<header id="header"><a href="index.html" class="logo"><strong>TELL</strong>US</a>
     <nav><a href="#menu">Menu</a>
     </nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-        <li><a href="generic.html">Generic</a></li>
-        <li><a href="elements.html">Elements</a></li>
+        <li><a href="generic.html">DreamFish Ask</a></li>
+        <li><a href="elements.html">Tell US</a></li>
     </ul></nav><section id="main"><div class="inner">
-        <header class="major special"><h1>Elements</h1>
+        <header class="major special"><h1>关于我们</h1>
             <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
         </header><!-- Text --><section><h3>Text</h3>
             <p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
