--- a/generic.html
+++ b/generic.html
@@ -9,8 +9,7 @@
 <header id="header"><a href="index.html" class="logo"><strong>DreamFish</strong> Ask</a>
     <nav><a href="#menu">Menu</a>
     </nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-        <li><a href="generic.html">Generic</a></li>
-        <li><a href="elements.html">Elements</a></li>
+        <li><a href="generic.html">DreamFish Ask</a></li>
     </ul></nav><section id="main"><div class="inner">
         <div class="image fit">
             <img src="images/pic11.jpg" alt=""></div>
