--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 				</nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">DreamFish Ask</a></li>
 				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
-					<h1>本站提供了大部分系统镜像<br>
-                                              让电脑骨灰级选手们轻松找到系统镜像！</a></h1>
+					<h1>让找镜像<br>
+                                              不再成为绊脚石！</a></h1>
 					</ul></div>
 			</section><!-- One --><article id="one" class="post style1"><div class="image">
 					<img src="images/pic14 .jpg" alt="" data-position="75% center" width="1450" height="788"></div>
