--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<div class="inner">
 						<header><h2><a href="generic.html">简介</a></h2>
 						</header><p>本站罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux甚至是Mac OS的dmg文件等大部分操作系统镜像。<br>
-							在这里免费为大家提供下载，不限速！<br>
+							在这里免费为大家提供下载，不限速！可在下载界面为我们打赏，提高我们镜像更新的动力！<br>
 							本站的两位开发者一个是初中生，一个是小学生，请不要对此网站进行破坏，谢谢！<br>
 							初中生QQ:257947712<br>
 							初中生邮箱:257947712@qq.com<br>
