--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 					<img src="images/dos.jpg" alt="" data-position="5% center" width="572" height="664"></div>
 				<div class="content">
 					<div class="inner">
-						</header><p>如果你愿意，可以在123云盘中资助我们，谢谢！</p>
+						</header><p>如果你愿意，可以在123云盘中资助我们，谢谢！<br>
+						2024年1月23日18:00，网站完工！</p>
 						</ul></div>
 					<div class="postnav">
 						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
