--- a/generic.html
+++ b/generic.html
@@ -21,6 +21,9 @@
         <p>A：Windows 10是适合大多数小白的最佳选择。它具有高度的稳定性、兼容性和易用性，同时对硬件的需求也相对较低。</p>
 	<p>Q：我想原神启动，什么系统适合我？</p>
 	<p>A：Windows Server 2019。这个系统负载低、稳定性高。</p>
+	<p>Q：怎么把Mac安装在虚拟机上？</p>
+	<p>A：由于在本站不方便做到完整，准确的解答，我们在网站查找了一份教程，希望对你有用。https://www.bilibili.com/read/cv24689285/</p>
+
     </div>
 </div>
 
