--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<!-- Header -->
 			<header id="header"><a href="index.html" class="logo"><strong>DreamFish</strong> Software</a>
+				<link rel="shortcut icon" type="image/x-icon" href="/df.ico?">
 				<nav><a href="#menu">Menu</a>
 				</nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">DreamFish Ask</a></li>
@@ -96,7 +97,7 @@
 						<header><h2><a href="generic.html">DreamFishAsk</a></h2>
 							<p class="info">Raining_Fish、赵某人<a href="#">提供服务</a></p>
 						</header><p>镜像不会用？怎么用虚拟机？装机用哪个ISO？——————这些问题于这个板块给大家解答！</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">Read More</a></li>
+						<ul class="actions"><li><a href="generic.html" class="button alt">一键解惑！</a></li>
 						</ul></div>
 					<div class="postnav">
 						<a href="#five" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
@@ -108,7 +109,8 @@
 				<div class="content">
 					<div class="inner">
 						</header><p>如果你愿意，可以在123云盘中资助我们，谢谢！<br>
-						2024年1月23日18:00，网站完工！</p>
+						2024年1月23日18:00，网站完成第一个Beta版本！</p>
+                                                2024年1月24日13:00，网站成功在Microsoft Bing上线且能够正常运作！</p>
 						</ul></div>
 					<div class="postnav">
 						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
