--- a/index.html
+++ b/index.html
@@ -1,109 +1,62 @@
-<!DOCTYPE HTML>
-<!--
-	Binary by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>DreamFish Software--系统镜像站</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
-
-		<!-- Header -->
-			<header id="header"><a href="index.html" class="logo"><strong>DreamFish</strong> Software</a>
-				<link rel="shortcut icon" type="image/x-icon" href="/df.ico?">
-				<nav><a href="#menu">Menu</a>
-				</nav></header><!-- Nav --><nav id="menu"><ul class="links"><li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">DreamFish Ask</a></li>
-				</ul></nav><!-- Banner --><section id="banner"><div class="inner">
-					<h1>让找镜像<br>
-                                              不再成为绊脚石！</a></h1>
-					</ul></div>
-			</section><!-- One --><article id="one" class="post style1"><div class="image">
-					<img src="images/pic14 .jpg" alt="" data-position="75% center" width="1450" height="788"></div>
-				<div class="content">
-					<div class="inner">
-						<header><h2><a href="generic.html">简介</a></h2>
-						</header><p>本站罗列了大部分的电脑操作系统镜像（iso，img），包含windows，linux甚至是Mac OS的dmg文件等大部分操作系统镜像。<br>
-							在这里免费为大家提供下载，不限速！可在下载界面为我们打赏，提高我们镜像更新的动力！<br>
-							本站的两位开发者一个是初中生，一个是小学生，请不要对此网站进行破坏，谢谢！<br>
-							初中生QQ:257947712<br>
-							初中生邮箱:257947712@qq.com<br>
-						       小学生WX：nitony2012<br>
-							小学生邮箱:nishaopeng1@outlook.com<br>
-							<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-rfAD3.html" class="button alt">点我进入总的下载列表</a></li>
-						</ul></div>
-					<div class="postnav">
-						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
-						<a href="#two" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header><h2><a href="generic.html">Windows 镜像</a></h2>
-							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
-						</header><p>Windows系统，来自微软的强大操作系统，广泛应用于全球的个人电脑。凭借其丰富的功能和广泛的软件支持，Windows系统为用户提供了高效的工作和娱乐体验。无论你是一个游戏爱好者还是专业人士，Windows都能满足你的需求，让你尽情享受电脑带来的便利和乐趣。</p>
-						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-WfAD3.html" class="button alt">点我进入下载列表</a></li>
-						</ul></div>
-					<div class="postnav">
-						<a href="#one" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#three" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header><h2><a href="generic.html">MacOS 镜像</a></h2>
-							<p class="info">此部分由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
-						</header><p>macOS，来自苹果的卓越操作系统，以其稳定性和流畅的用户体验受到全球用户的喜爱。macOS集成了丰富的苹果应用，并支持众多第三方软件，让你的Mac电脑成为工作和娱乐的理想伙伴。无论你是创意工作者还是日常办公用户，macOS都能满足你的需求，让你的电脑体验更上一层楼。</p>
-						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-CfAD3.html" class="button alt">点我进入下载列表</a></li>
-						</ul></div>
-					<div class="postnav">
-						<a href="#two" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#four" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header><h2><a href="generic.html">Linux 镜像</a></h2>
-							<p class="info">此部分还是由Raining_Fish，赵某人<a href="#">提供镜像资源</a>
-						</header><p>Linux是一款强大的开源操作系统，广泛应用于服务器、桌面和移动设备。它拥有稳定、高效和安全的特性（rm -rf /*），成为许多企业和开发者的首选。Linux具有丰富的软件生态，支持各种应用和服务，满足用户的不同需求。无论是初学者还是专业人士，Linux都能提供强大的技术支持和灵活的定制选项。</p>
-						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-NfAD3.html" class="button alt">点我进入下载列表</a></li>
-						</ul></div>
-					<div class="postnav">
-						<a href="#three" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#five" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header><h2><a href="generic.html">远古系统</a></h2>
-							<p class="info">此部分依然由Raining_Fish，赵某人<a href="#">提供镜像资源</p>
-						</header><p>远古系统，如MS-DOS，是计算机技术的先驱。作为早期操作系统的代表，它为现代计算机技术的发展奠定了基础。尽管现在看来功能有限，但它在当时是革命性的创新，为后来的Windows等操作系统铺平了道路。<br>BASIC：世界...遗忘我...</p>
-						<ul class="actions"><li><a href="https://www.123pan.com/s/OmZbVv-OfAD3.html" class="button alt">点我进入下载列表</a></li>
-						</ul></div>
-					<div class="postnav">
-						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#six" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header><h2><a href="generic.html">DreamFishAsk</a></h2>
-							<p class="info">Raining_Fish、赵某人<a href="#">提供服务</a></p>
-						</header><p>镜像不会用？怎么用虚拟机？装机用哪个ISO？——————这些问题于这个板块给大家解答！</p>
-						<ul class="actions"><li><a href="generic.html" class="button alt">一键解惑！</a></li>
-						</ul></div>
-					<div class="postnav">
-						<a href="#five" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#" class="scrolly next disabled"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-				<div class="content">
-					<div class="inner">
-						</header><p>如果你愿意，可以在123云盘中资助我们，谢谢！<br>
-						2024年1月23日18:00，网站完成第一个Beta版本！</p>
-                                                2024年1月24日13:00，网站成功在Microsoft Bing上线且能够正常运作！</p>
-						</ul></div>
-					<div class="postnav">
-						<a href="#four" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#six" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-					</div>
-				</div>
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/skel.min.js"></script><script src="assets/js/util.js"></script><script src="assets/js/main.js"></script></body></html>
+<body>
+  <div id="default-editor-page__placeholder" class="panel">
+    <link rel="stylesheet" href="https://template-1253409072.cos.ap-guangzhou.myqcloud.com/vip-tpl/assets/css/plugins.css"/>
+    <link rel="stylesheet" href="https://template-1253409072.cos.ap-guangzhou.myqcloud.com/vip-tpl/assets/css/style.css"/>
+    <section class="wrapper bg-gradient-primary">
+      <div class="container py-18 pt-md-14 pb-md-14">
+        <div class="row text-center">
+          <div class="col-lg-9 col-xxl-7 mx-auto">
+            <h2 class="display-1 mb-4">让找镜像，不再成为绊脚石！
+            </h2>
+            <p class="lead fs-24 lh-sm px-md-5 px-xl-15 px-xxl-10 mb-7">下载不限速，无广告，不跑路！
+            </p>
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+        <div class="d-flex justify-content-center">
+          <span><a href="https://htmlpage.cn/builder/" class="btn btn-lg btn-primary rounded-pill mx-1">进入总的下载链接</a></span>
+          <span><a href="https://htmlpage.cn/contact" class="btn btn-lg btn-outline-primary rounded-pill mx-1">联系我们</a></span>
+        </div>
+        <!-- /div -->
+        <div class="row mt-10">
+          <div class="col-lg-8 mx-auto">
+            <figure>
+              <img src="https://template-1253409072.cos.ap-guangzhou.myqcloud.com/sandbox/assets/img/illustrations/i12.png" alt="" class="img-fluid"/>
+            </figure>
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <section class="wrapper bg-gradient-primary">
+      <div class="container pt-14 pb-8">
+        <div class="row text-center">
+          <div class="col-lg-9 col-xxl-7 mx-auto">
+            <h2 class="display-1 mb-4">Windows镜像
+            </h2>
+          </div>
+          <p class="lead fs-24 lh-sm px-md-5 px-xl-15 px-xxl-10 mb-7">
+            <span class="c2140">此部分由Raining_Fish，赵某人</span>
+            <a href="https://dreamfishoffical.github.io/nsp.cn/index.html#" class="c2158">提供镜像资源</a>
+          </p>
+          <!-- /column -->
+        </div>
+        <p class="lead fs-24 lh-sm px-md-5 px-xl-15 px-xxl-10 mb-7">
+          <span id="iga7z" class="c2595">Windows系统，来自微软的强大操作系统，广泛应用于全球的个人电脑。凭借其丰富的功能和广泛的软件支持，Windows系统为用户提供了高效的工作和娱乐体验。无论你是一个游戏爱好者还是专业人士，Windows都能满足你的需求，让你尽情享受电脑带来的便利和乐趣。</span>
+          <font color="#1abc9c" face="Lato, Arial, Helvetica, sans-serif">
+            <span id="i46ak" class="c1581"></span>
+          </font>
+          <br/>
+        </p>
+        <a class="c4673">Link</a>
+      </div>
+    </section>
+    <div class="wechat-group pb-12">
+    </div>
+    <div class="description">© 2024 DreamFishOffical. 版权所有
+    </div>
+  </div>
+</body>
