--- a/testindex.html
+++ b/testindex.html
@@ -56,7 +56,7 @@
     </section>
     <div class="wechat-group pb-12">
     </div>
-    <div class="description">© 2023 Lapus. 版权所有
+    <div class="description">© 2024 DreamFishOffical. 版权所有
     </div>
   </div>
 </body>
